# gecs

./: .gitignore  .mcp.json  .repomixignore  CHANGELOG.md  CLAUDE.md  DEPENDENCIES.md  FIXES_APPLIED.md  GDEXTENSION_IMPLEMENTATION_GUIDE.md  PERFORMANCE_REVIEW.md  PR_DESCRIPTION.md  README.md  RELATIONSHIP_OPTIMIZATION.md  TestImageStuff.gd  component.gd  default_bus_layout.tres  ecs.gd  entity.gd  export_presets.cfg  gecs_data.gd  icon.png.import  icon.svg.import  io.gd  main.gd  main.tscn  plugin.cfg  plugin.gd  project.godot  query_builder.gd  relationship.gd  repomix.config.json  system.gd  test_image_stuff.tscn  world.gd
.claude/: settings.local.json
.github/: copilot-instructions.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
assets/: ball.png.import  brick.png.import  map-1.png.import  network_session.svg.import  paddle.png.import  shatter.png.import  system_folder.svg.import
debug/: gecs_editor_debugger_messages.gd  gecs_editor_debugger_tab.gd  gecs_editor_debugger_tab.tscn
docs/: BEST_PRACTICES.md  CORE_CONCEPTS.md  GETTING_STARTED.md  RELATIONSHIPS.md  SERIALIZATION.md
ecs/: archetype.gd  ecs.gd  entity.gd  query_builder.gd  query_cache_key.gd  relationship.gd  system.gd  world.gd
example/: main.gd  main.gd.uid  main.tscn  tick_source_setup_example.gd
example_multimesh/: multimesh_main.gd  multimesh_main.gd.uid  multimesh_main.tscn
example_network/: README.md  main.gd  main.gd.uid  (+1 more)
tools/perf_viewer/: README.md  pyproject.toml
tools/perf_viewer/perf_viewer/: __init__.py  cli.py
(+2121 files in other folders)
